✨ feat: 예약 확정시 알림기능 추가
- 예약 확정시 SSE를 통해 사용자에게 알림이 발송됨
- 기존 timetable에서 시간을 확인하던 것을 slot을 통해 확인하도록 변경
- reissue RTR 점검 (refreshtoken 재발급 후 블랙리스트에 추가하는 로직 추가)

Ref. #S14P11A704-212